--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,20 @@
-// Начните писать стили здесь
+//global
+@import "./global.less";
+@import "./fonts.less";
+@import "./colors.less";
+@import "./page.less";
+@import "./page-header.less";
+@import "./navigation.less";
+@import "./page-main.less";
+@import "./page-footer.less";
+@import "./social.less";
+@import "./copyright.less";
+
+// index
+@import "./attractor-main.less";
+@import "./advantages.less";
+@import "./hotel-search.less";
+
+// form
+
+// catalog
