--- a/source/less/attractor-main.less
+++ b/source/less/attractor-main.less
@@ -1,8 +1,7 @@
 .attractor-main__wrapper {
-  background:
-  url("../img/poster-shape-mobile-left.png") no-repeat left bottom,
-  url("../img/poster-shape-mobile-right.png") no-repeat right bottom,
-  @poster-background url("../img/poster-background-mobile.jpg") no-repeat;
+  background: url("../img/poster-shape-mobile-left.png") no-repeat left bottom,
+    url("../img/poster-shape-mobile-right.png") no-repeat right bottom,
+    @poster-background url("../img/poster-background-mobile.jpg") no-repeat;
 }
 
 .attractor-main__about {
