--- a/source/less/base/colors.less
+++ b/source/less/base/colors.less
@@ -1,3 +1,10 @@
+@color-white: #FFFFFF;
+@color-black: #000000;
+@color-grey: #EEEEEE;
+@color-grey-dark:  #333333;
+@color-blue: #81B3D2;
+@color-blue-light: #b2cde8;
+
 @menu-color: #000000;
 @poster-background: #b2cde8;
 @attractor-text: #000000;
