--- a/source/less/base/fonts.less
+++ b/source/less/base/fonts.less
@@ -2,7 +2,7 @@
   font-family: "PT Sans";
   src: url("../fonts/ptsans.woff2") format("woff2"),
     url("../fonts/ptsans.woff") format("woff");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -11,7 +11,7 @@
   font-family: "PT Sans";
   src: url("../fonts/ptsansbold.woff2") format("woff2"),
     url("../fonts/ptsansbold.woff") format("woff");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
