--- a/source/less/blocks/attractor-main.less
+++ b/source/less/blocks/attractor-main.less
@@ -1,12 +1,16 @@
+.attractor-main {
+  .uppercase();
+}
+
 .attractor-main__wrapper {
   background: url("../img/poster-shape-mobile-left.png") no-repeat left bottom,
     url("../img/poster-shape-mobile-right.png") no-repeat right bottom,
-    @poster-background url("../img/poster-background-mobile.jpg") no-repeat;
+    @color-blue-light url("../img/poster-background-mobile.jpg") no-repeat;
 }
 
 .attractor-main__about {
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: @attractor-text;
+  .font-family-bold();
+  .font-size-medium();
+  .line-height-large();
+  color: @color-black;
 }
