--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,19 +1,19 @@
 //global
-@import "./global.less";
-@import "./fonts.less";
-@import "./colors.less";
-@import "./page.less";
-@import "./page-header.less";
-@import "./navigation.less";
-@import "./page-main.less";
-@import "./page-footer.less";
-@import "./social.less";
-@import "./copyright.less";
+@import "./base/base.less";
+@import "./base/colors.less";
+@import "./base/fonts.less";
+@import "./base/mixins.less";
+
+@import "./blocks/page-header.less";
+@import "./blocks/navigation.less";
+@import "./blocks/page-footer.less";
+@import "./blocks/social.less";
+@import "./blocks/copyright.less";
 
 // index
-@import "./attractor-main.less";
-@import "./advantages.less";
-@import "./hotel-search.less";
+@import "./blocks/attractor-main.less";
+@import "./blocks/advantages.less";
+@import "./blocks/hotel-search.less";
 
 // form
 
