Стилизация страницы формы

--- a/source/less/base/colors.less
+++ b/source/less/base/colors.less
@@ -1,6 +1,7 @@
 @color-white: #FFFFFF;
 @color-black: #000000;
-@color-grey: #EEEEEE;
+@color-grey-light: #EEEEEE;
+@color-grey: #E2E2E2;
 @color-grey-dark:  #333333;
 @color-blue: #81B3D2;
 @color-blue-light: #b2cde8;
