--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,17 +3,22 @@
 @import "./base/colors.less";
 @import "./base/fonts.less";
 @import "./base/mixins.less";
-@import "./blocks/page-header.less";
-@import "./blocks/navigation.less";
-@import "./blocks/page-footer.less";
-@import "./blocks/social.less";
-@import "./blocks/copyright.less";
-
-// index
-@import "./blocks/attractor-main.less";
-@import "./blocks/advantages.less";
-@import "./blocks/hotel-search.less";
-
+//shared
+@import "./blocks/_shared/attractor.less";
+@import "./blocks/_shared/copyright.less";
+@import "./blocks/_shared/navigation.less";
+@import "./blocks/_shared/page-footer.less";
+@import "./blocks/_shared/page-header.less";
+@import "./blocks/_shared/social.less";
 // form
-
+@import "./blocks/form/attractions.less";
+@import "./blocks/form/contacts.less";
+@import "./blocks/form/emotions.less";
+@import "./blocks/form/impression.less";
+@import "./blocks/form/introduce.less";
+@import "./blocks/form/review-form.less";
+// index
+@import "./blocks/index/advantages.less";
+@import "./blocks/index/attractor-main.less";
+@import "./blocks/index/hotel-search.less";
 // catalog
