Разметка страницы каталога

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,7 @@
 @import "./blocks/index/attractor-main.less";
 @import "./blocks/index/hotel-search.less";
 // catalog
+@import "./blocks/catalog/gallery.less";
+@import "./blocks/catalog/likes.less";
+@import "./blocks/catalog/photo.less";
+@import "./blocks/catalog/presentation-video.less";
